# Solyn

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: huggingface_commands.rs  mod.rs  ollama_commands.rs  platform_commands.rs
src-tauri/src/core/: huggingface_client.rs  installation_executor.rs  mod.rs  model_downloader.rs  ollama_client.rs
src-tauri/src/data/: download_state.rs  huggingface_model_types.rs  mod.rs  ollama_model_types.rs
src-tauri/src/events/: mod.rs  progress_broadcaster.rs
src-tauri/src/helpers/: mod.rs  platform_detector.rs  terminal_output_cleaner.rs
src/components/: ChatInterface.tsx  Sidebar.tsx
src/components/chat/: ChatControls.tsx  ChatInput.tsx  ChatInterface.tsx  ModeToggle.tsx  ModelSelector.tsx  ToggleButton.tsx
src/components/chat/hooks/: useChatInput.ts  useFileAttachment.ts  useModelSelection.ts
src/components/models/: BrowseModels.tsx  DownloadDetails.tsx  DownloadStatusDisplay.tsx  ModelDetailModal.tsx  ModelInterface.tsx  ModelList.tsx  TerminalDisplay.tsx
src/components/models/ModalDetails/: ErrorState.tsx  LoadingState.tsx  ModalHeader.tsx  ModelInfo.tsx  QuantizationCard.tsx  SelectedFileDetails.tsx  index.ts
src/components/models/hooks/: useHuggingFaceModels.ts  useModelDetails.ts  useOllamaInstallation.tsx  (+1 more)
src/components/sidebar/: Sidebar.tsx  SidebarItem.tsx  SidebarNavigation.tsx
src/contexts/: OllamaContext.tsx
(+2 files in other folders)
